# mdguard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mdguard.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-validation.yml  release.yml
docs/: API.md  ARCHITECTURE.md  AUTOFIX_POLICY.md  CONFIGURATION.md  DESIGN.md  DEVELOPMENT.md  INTEGRATIONS.md  OUTPUT.md  RELEASE_CHECKLIST.md  ROADMAP.md  RULES.md
rules/: duplicate_headings.py  empty_link.py  heading_jump.py  line_length.py  missing_h1.py  trailing_whitespace.py
scripts/: bidi-scan.py  validate.py
src/mdguard/: __init__.py  annotations.py  api.py  baseline.py  cli.py  config.py  core.py  discovery.py  models.py  output.py
src/mdguard/rules/: __init__.py  duplicate_headings.py  empty_link.py  final_newline.py  heading_jump.py  internal_anchor.py  line_length.py  missing_h1.py  trailing_whitespace.py
tests/: test_cli.py  test_core.py  test_discovery.py  test_phase_issues.py  test_rules.py
