[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdguard"
version = "0.1.0"
description = "Tiny, dependency-free Markdown lint guardrails."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Billy Box" }
]
keywords = ["markdown", "lint", "documentation", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[project.scripts]
mdguard = "mdguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
